Search form sent on enter & language options dropdown alignment fix

--- a/optitraffic/assets/css/main.css
+++ b/optitraffic/assets/css/main.css
@@ -184,8 +184,12 @@ footer {
     display: inline-block;
 }
 
-.data-row {
+.dropdown-lang-options {
+    left: auto !important;
+    right: 0 !important;
+}
 
+.data-row {
 }
 
 .error-row {
